@@ -1,3 +1,8 @@
+2003-01-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* drivers/fs/vfat/create.c (VfatSupersedeFile): Only notify cache manager
+	about change in file size if caching is initiated on the file stream.
+
 2003-01-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* boot.bat: Use DOS end-of-line characters.
